--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,7 @@
 #   replaced with trusted server locations in a production environment
 Header add Access-Control-Allow-Origin "*"
 Header add Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, x-api-key"
 
 # This line enables the rewrite engine
 RewriteEngine on 
